--- a/tintuc-sukien/danhmuc/ct.html
+++ b/tintuc-sukien/danhmuc/ct.html
@@ -48,10 +48,10 @@
         </div>
         <div class="slideshow-news-container position-relative">
             <!-- Thêm nút điều hướng tùy chỉnh -->
-            <button class="custom-prev-btn" onclick="handleSlideNav('prev')" type="button">
+            <button class="custom-prev-btn" onclick="handleSlideNav('prev')">
                 <img src="/documents/39403/310714/left-arrow.svg" alt="Previous"/>
             </button>
-            <button class="custom-next-btn" onclick="handleSlideNav('next')" type="button">
+            <button class="custom-next-btn" onclick="handleSlideNav('next')">
                 <img src="/documents/39403/310714/right-arrow.svg" alt="Next"/>
             </button>
 
@@ -168,66 +168,3 @@
 </div>
 
 
-<script>
-function handleSlideNav(direction) {
-    // Get the currently active tab panel
-    const activeTabPanel = document.querySelector('.tab-panel-item:not(.d-none)');
-    if (!activeTabPanel) return;
-    
-    // Find swiper within active tab panel
-    const swiperElement = activeTabPanel.querySelector('.newsSwiper');
-    if (!swiperElement || !swiperElement.swiper) {
-        console.log('No valid swiper found in active tab');
-        return;
-    }
-
-    // Ensure navigation is enabled
-    swiperElement.swiper.allowSlideNext = true;
-    swiperElement.swiper.allowSlidePrev = true;
-    swiperElement.swiper.allowTouchMove = true;
-
-    try {
-        if (direction === 'prev') {
-            swiperElement.swiper.slidePrev();
-        } else {
-            swiperElement.swiper.slideNext();
-        }
-    } catch (err) {
-        console.error('Error navigating slides:', err);
-    }
-}
-
-// Initialize swiper for a specific tab panel
-function initializeSwiperForTab(tabPanel) {
-    const swiperElement = tabPanel.querySelector('.newsSwiper');
-    if (!swiperElement) return;
-
-    // Destroy existing swiper instance if any
-    if (swiperElement.swiper) {
-        swiperElement.swiper.destroy();
-    }
-}
-
-// Handle tab changes
-document.addEventListener('click', function(event) {
-    const clickedTab = event.target.closest('.nav-link-gt-chiquyen');
-    if (clickedTab) {
-        // Wait for tab content to be visible
-        setTimeout(() => {
-            const tabId = clickedTab.getAttribute('aria-controls');
-            const tabPanel = document.getElementById(tabId);
-            if (tabPanel) {
-                initializeSwiperForTab(tabPanel);
-            }
-        }, 100);
-    }
-});
-
-// Initialize swiper for initially active tab
-document.addEventListener('DOMContentLoaded', function() {
-    const activeTabPanel = document.querySelector('.tab-panel-item:not(.d-none)');
-    if (activeTabPanel) {
-        initializeSwiperForTab(activeTabPanel);
-    }
-});
-</script>
